--- a/FriendsMess/Views/Update/New.cshtml
+++ b/FriendsMess/Views/Update/New.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Update meals";
 }
 
-<h2>New</h2>
+<h2>Update meals</h2>
 @using (Html.BeginForm("Save","Update"))
 {
     <div class="form-group">
