--- a/FriendsMess/Views/Members/Index.cshtml
+++ b/FriendsMess/Views/Members/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Members</h2>
 <div style="padding: 10px;">
-    @Html.ActionLink("New Member", "New", "Members", new { @class = "btn btn-success" })
+    @Html.ActionLink("New Member", "New", "Members","", new { @class = "btn btn-success" })
 </div>
 <table class="table table-bordered table-hover">
     <thead>
