--- a/FriendsMess/Views/Update/New.cshtml
+++ b/FriendsMess/Views/Update/New.cshtml
@@ -19,8 +19,9 @@
         {
             <div class="form-group">
                 @member.Name
-                @Html.TextBoxFor(m => m.Meals[i].MealNo, new { @class = "form-control" })
+                @*@Html.TextBoxFor(m => m.Meals[i].MealNo, new { @class = "form-control" })*@
                 @{
+                    @Html.DropDownListFor(m => m.Meals[i].MealNo, new SelectList(new List<int>(){0,1,2,3,4,5,6,7,8,9,10}), new {@class = "form-control"})
                     Model.Meals[i].MemberId = member.Id;
                 }
                 @Html.ValidationMessageFor(m => m.Meals[i].MealNo)
