--- a/FriendsMess/Views/Home/Index.cshtml
+++ b/FriendsMess/Views/Home/Index.cshtml
@@ -6,7 +6,9 @@
     float mealRate = home.GetMealRate();    
 }
 
-<h2 style="text-align: center">Meal Rate:@mealRate</h2>
+<span>@Html.ActionLink("Start New Month", "NewMonth", "Home", new { @class = "btn btn-danger" ,style="float:right;margin-top:5px;"})
+</span>
+<h2 style="text-align: center; color:crimson">Meal Rate:@mealRate</h2>
 <div>
     <table class="table table-hover table-bordered">
         <thead>
