--- a/FriendsMess/Views/Members/Index.cshtml
+++ b/FriendsMess/Views/Members/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<FriendsMess.Models.Member>
+﻿@using System.Web.UI.WebControls
+@model List<FriendsMess.Models.Member>
 @{
     ViewBag.Title = "Member";
 }
@@ -7,7 +8,7 @@
 <div style="padding: 10px;">
     @Html.ActionLink("New Member", "New", "Members","", new { @class = "btn btn-success" })
 </div>
-<table class="table table-bordered table-hover">
+<table id="member" class="table table-bordered table-hover">
     <thead>
     <tr>
         <th>Name</th>
@@ -23,10 +24,28 @@
             <td>@Html.ActionLink(member.Name, "Edit", new { id = member.Id })</td>
             <td>@member.Deposit</td>
             <td>@Html.ActionLink("View Meals","ViewMeal",new{id=member.Id})</td>
-            <td>@Html.ActionLink("Delete", "Delete", new { id = member.Id })</td>
+            <td>
+                <button data-member-id="@member.Id" class="btn-link js-delete">Delete</button>
+            </td>
         </tr>
 
     }
     </tbody>
 </table>
+@section scripts{
+    <script>
+        $(document).ready(function() {
+            $("#member .js-delete").on("click",
+                function () {
+                    var button = $(this);
+                    bootbox.confirm("Are you sure you want to delete this member?",
+                        function (result) {
+                            if (result) {
+                                url:"Members/Delete/" + button.attr("data-member-id")
 
+                            }
+                        });
+                });
+        });
+    </script>
+}
