--- a/FriendsMess/Views/Update/New.cshtml
+++ b/FriendsMess/Views/Update/New.cshtml
@@ -3,43 +3,51 @@
     ViewBag.Title = "Update meals";
 }
 
-<h2>Update meals</h2>
-@using (Html.BeginForm("Save","Update"))
+<h2 style="text-align: center;color: darkred">Update meals</h2>
+@if (Model.Members.Count > 0)
 {
-    <div class="form-group">
-        @Html.LabelFor(m=>m.Day)
-        @Html.DropDownListFor(m => m.Day, new SelectList(Model.Days, "Id", "Id"), "Select day no", new {@class = "form-control"})
-        @Html.ValidationMessageFor(m => m.Day)
+    using (Html.BeginForm("Save","Update"))
+     {   
+         <div class="form-group">
+             @Html.LabelFor(m=>m.Day)
+             @Html.DropDownListFor(m => m.Day, new SelectList(Model.Days, "Id", "Id"), "Select day no", new {@class = "form-control"})
+             @Html.ValidationMessageFor(m => m.Day)
+         </div>
+         <div>
+             @{
+                 var i = 0;
+             }
+             @foreach (var member in Model.Members)
+             {
+                 <div class="form-group">
+                     @member.Name
+                     @*@Html.TextBoxFor(m => m.Meals[i].MealNo, new { @class = "form-control" })*@
+                     @{
+                         @Html.DropDownListFor(m => m.Meals[i].MealNo, new SelectList(new List<int>(){2,1,0,3,4,5,6,7,8,9,10}), new {@class = "form-control"})
+                         Model.Meals[i].MemberId = member.Id;
+                     }
+                     @Html.ValidationMessageFor(m => m.Meals[i].MealNo)
+                     @Html.HiddenFor(m => m.Meals[i].MemberId, new { value = member.Id })
+                     @{
+                         i++;
+                     }
+                 </div>
+             }
+             <div class="form-group">
+                 @Html.LabelFor(m=>m.Expense)
+                 @Html.TextBoxFor(m=>m.Expense,new{@class="form-control"})
+                 @Html.ValidationMessageFor(m => m.Expense)
+             </div>
+             <div>
+                 @Html.DropDownListFor(m => m.ResponsibleMem, new SelectList(Model.Members, "Name", "Name"), "Select Responsible Member", new { @class = "form-control" })
+             </div>
+             <button type="submit" class="btn btn-primary" style="margin-top: 10px;">Save</button>
+         </div>
+     }
+}
+else
+{
+    <div style="margin-top: 10%;" class=" jumbotron">
+        <h3 style="color:red;">Add members first !</h3>
     </div>
-    <div>
-        @{
-            var i = 0;
-        }
-        @foreach (var member in Model.Members)
-        {
-            <div class="form-group">
-                @member.Name
-                @*@Html.TextBoxFor(m => m.Meals[i].MealNo, new { @class = "form-control" })*@
-                @{
-                    @Html.DropDownListFor(m => m.Meals[i].MealNo, new SelectList(new List<int>(){2,1,0,3,4,5,6,7,8,9,10}), new {@class = "form-control"})
-                    Model.Meals[i].MemberId = member.Id;
-                }
-                @Html.ValidationMessageFor(m => m.Meals[i].MealNo)
-                @Html.HiddenFor(m => m.Meals[i].MemberId, new { value = member.Id })
-                @{
-                    i++;
-                }
-            </div>
-        }
-        <div class="form-group">
-            @Html.LabelFor(m=>m.Expense)
-            @Html.TextBoxFor(m=>m.Expense,new{@class="form-control"})
-            @Html.ValidationMessageFor(m => m.Expense)
-        </div>
-        <div>
-            @Html.DropDownListFor(m => m.ResponsibleMem, new SelectList(Model.Members, "Name", "Name"), "Select Responsible Member", new { @class = "form-control" })
-        </div>
-        <button type="submit" class="btn btn-primary" style="margin-top: 10px;">Save</button>
-    </div>
-
 }
