--- a/FriendsMess/Views/Home/Expense.cshtml
+++ b/FriendsMess/Views/Home/Expense.cshtml
@@ -2,10 +2,12 @@
 @{
     ViewBag.Title = "Expense";
 }
-<h2>Daily Expenses</h2>
+<h2 style="text-align: center; color: darkred;">Daily Expenses</h2>
+@if (Model.Count > 0)
+{
 <table class="table table-bordered table-hover">
     <thead>
-    <tr>
+    <tr class="danger">
         <th>Day</th>
         <th>Expense</th>
         <th>Total Meals</th>
@@ -64,3 +66,11 @@
     </tr>
     </tbody>
 </table>
+}
+else
+{
+    <div style="margin-top: 10%;" class="jumbotron">
+        <h3 style="color:red;">No expenses to show !</h3>
+        
+    </div>
+}
