--- a/FriendsMess/Views/Members/Index.cshtml
+++ b/FriendsMess/Views/Members/Index.cshtml
@@ -4,13 +4,15 @@
     ViewBag.Title = "Member";
 }
 
-<h2>Members</h2>
-<div style="padding: 10px;">
-    @Html.ActionLink("New Member", "New", "Members","", new { @class = "btn btn-success" })
-</div>
+<span style="float:right;margin-top:10px;">
+    @Html.ActionLink("New Member", "New", "Members", "", new { @class = "btn btn-primary" })
+</span>
+<h2 style="text-align: center; color: darkred;">Members</h2>
+@if (Model.Count > 0)
+{
 <table id="member" class="table table-bordered table-hover">
     <thead>
-    <tr>
+    <tr class="danger">
         <th>Name</th>
         <th>Deposit</th>
         <th>Meals</th>
@@ -32,6 +34,14 @@
     }
     </tbody>
 </table>
+    
+}
+else
+{
+    <div style="margin-top: 10%;" class="jumbotron">
+        <h3 style="color:red;">No Members yet !</h3>
+    </div>
+}
 @section scripts{
     <script>
         $(document).ready(function() {
@@ -41,8 +51,13 @@
                     bootbox.confirm("Are you sure you want to delete this member?",
                         function (result) {
                             if (result) {
-                                url:"Members/Delete/" + button.attr("data-member-id")
-
+                                $.ajax({
+                                    url: '@Url.Action("Delete","Members")',
+                                    data: { id: button.attr("data-member-id") },
+                                    success:function() {
+                                        window.location.href = '@Url.Action("Index","Members")';
+                                    }
+                            });
                             }
                         });
                 });
