--- a/FriendsMess/Views/Members/ViewMeal.cshtml
+++ b/FriendsMess/Views/Members/ViewMeal.cshtml
@@ -5,6 +5,8 @@
 }
 
 <h2>@ViewBag.member</h2>
+@if (Model.Count > 0)
+{
 <div>
     <table class="table table-hover table-bordered">
         <thead>
@@ -36,3 +38,11 @@
         </tbody>
     </table>
 </div>
+    
+}
+else
+{
+    <div style="margin-top: 10%;" class=" jumbotron">
+        <h3 style="color:red;">No meals yet !</h3>
+    </div>
+}
