modyfying Update menu

--- a/FriendsMess/Views/Home/Expense.cshtml
+++ b/FriendsMess/Views/Home/Expense.cshtml
@@ -58,9 +58,9 @@
             }
             
         }
-        <td>Total:</td>
-        <td>@totalExpense</td>
-        <td>@totalMeal</td>
+        <td style="text-align: right">Total:</td>
+        <td style="font-weight: bold">@totalExpense</td>
+        <td style="font-weight: bold">@totalMeal</td>
         <td style="text-align: right">Average Meal Rate:</td>
         <td style="font-weight: bold">@averageMealRate</td>
     </tr>
