--- a/FriendsMess/Views/Members/MemberForm.cshtml
+++ b/FriendsMess/Views/Members/MemberForm.cshtml
@@ -18,6 +18,12 @@
         @Html.ValidationMessageFor(m => m.Deposit)
 
     </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.MobileNumber)
+        @Html.TextBoxFor(m => m.MobileNumber, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.MobileNumber)
+
+    </div>
     
     @Html.HiddenFor(m => m.Id)
     @Html.AntiForgeryToken()
