--- a/FriendsMess/Views/Update/New.cshtml
+++ b/FriendsMess/Views/Update/New.cshtml
@@ -9,19 +9,19 @@
         using (Html.BeginForm("Save", "Update"))
         {
             
-            <div style="float: left; padding-right: 10%; margin-left: 10%;">
+            <div style="float: left; width:50%; margin-left: 10%; padding-bottom: 20px;">
                 @{
-            var i = 0;
+                    var i = 0;
                 }
                 <table>
                     <tr>
-                        <td style="font-weight: bold">Members</td>
-                        <td style="text-align: right;font-weight: bold">Meals</td>
+                        <td style="font-weight: bold; padding-right: 50px;">Members</td>
+                        <td style="text-align: center;font-weight: bold">Meals</td>
                     </tr>
                     @foreach (var member in Model.Members)
                     {
                         <tr>
-                            <td>
+                            <td style="padding-right: 5px;">
                                 @member.Name
                             </td>
                             <td>
@@ -42,7 +42,7 @@
                     }
                 </table>
             </div>
-            <div style="float: right; margin-right: 20%; padding-left: 20%;">
+            <div style="float: right; margin-right: 20%; width: 20%; padding-bottom: 10px;">
                 <div class="form-group">
                     @Html.LabelFor(m => m.Day)
                     @Html.DropDownListFor(m => m.Day, new SelectList(Model.Days, "Id", "Id"), "Select day no", new { @class = "form-control" })
@@ -54,6 +54,7 @@
                     @Html.ValidationMessageFor(m => m.Expense)
                 </div>
                 <div>
+                    <label><b>Responsible Member</b></label>
                     @Html.DropDownListFor(m => m.ResponsibleMem, new SelectList(Model.Members, "Name", "Name"), "Select Responsible Member", new {@class = "form-control"})
                 </div>
                 <button type="submit" class="btn btn-primary" style="margin-top: 10px;">Save</button>
