--- a/FriendsMess/Views/Members/Index.cshtml
+++ b/FriendsMess/Views/Members/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <span style="float:right;margin-top:10px;">
-    @Html.ActionLink("New Member", "New", "Members", "", new { @class = "btn btn-primary" })
+    @Html.ActionLink("New Member", "New", "Members", null, new { @class = "btn btn-primary" })
 </span>
 <h2 style="text-align: center; color: darkred;">Members</h2>
 @if (Model.Count > 0)
