--- a/FriendsMess/Views/Update/New.cshtml
+++ b/FriendsMess/Views/Update/New.cshtml
@@ -45,7 +45,7 @@
             <div style="float: right; margin-right: 20%; width: 20%; padding-bottom: 10px;">
                 <div class="form-group">
                     @Html.LabelFor(m => m.Day)
-                    @Html.DropDownListFor(m => m.Day, new SelectList(Model.Days, "Id", "Id"), "Select day no", new { @class = "form-control" })
+                    @Html.DropDownListFor(m => m.Day, Model.Days, "Select day no", new { @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.Day)
                 </div>
                 <div class="form-group">
