--- a/FriendsMess/Views/Home/Expense.cshtml
+++ b/FriendsMess/Views/Home/Expense.cshtml
@@ -23,7 +23,7 @@
     @foreach (var day in Model)
     {
         <tr>
-            <td>@day.Id</td>
+            <td>@day.DayNumber</td>
             <td>@day.Expense</td>
             <td>@day.TotalMeal</td>
             @{
