--- a/FriendsMess/Views/Account/Login.cshtml
+++ b/FriendsMess/Views/Account/Login.cshtml
@@ -44,6 +44,9 @@
                 <p>
                     @Html.ActionLink("Register", "Register") if you don't have a local account.
                 </p>
+                <p>
+                    @Html.ActionLink("View As a member", "Index","ViewOnly") to check an existing Mess
+                </p>
             }
         </section>
     </div>
