--- a/FriendsMess/Views/Members/ViewMeal.cshtml
+++ b/FriendsMess/Views/Members/ViewMeal.cshtml
@@ -4,13 +4,13 @@
     var totalMeal = 0;
 }
 
-<h2>@ViewBag.member</h2>
+<h2 style="text-align: center;color: brown">Meals of @ViewBag.member</h2>
 @if (Model.Count > 0)
 {
 <div>
     <table class="table table-hover table-bordered">
         <thead>
-        <tr>
+        <tr class="danger">
             <th>Day</th>
             <th>Meal number</th>
         </tr>
@@ -32,7 +32,7 @@
             </tr>
         }
         <tr>
-            <td>Total:</td>
+            <td style="text-align: right">Total:</td>
             <td style="font-weight: bold">@totalMeal</td>
         </tr>
         </tbody>
