--- a/FriendsMess/Views/Extra/Index.cshtml
+++ b/FriendsMess/Views/Extra/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<FriendsMess.Models.OtherExpense>
+﻿@using System.Globalization
+@model List<FriendsMess.Models.OtherExpense>
 @{
     ViewBag.Title = "Ohters";
 }
@@ -24,7 +25,7 @@
         {
             <tr>
                 <td>@Html.ActionLink(extra.Name,"Edit",new{id=extra.Id})</td>
-                <td>@extra.Amount.ToString("C0")</td>
+                <td>@extra.Amount.ToString("C0", CultureInfo.CreateSpecificCulture("en-BD"))</td>
                 <td>@extra.Description</td>
                 @*<td>@Html.ActionLink("Delete","Delete",new{id=extra.Id})</td>*@
                 <td><button data-extra-id=@extra.Id class="btn-link js-clearExtra">Delete</button></td>
