--- a/FriendsMess/Views/Home/Index.cshtml
+++ b/FriendsMess/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using FriendsMess.Controllers
+﻿@using System.Globalization
+@using FriendsMess.Controllers
 @using Microsoft.AspNet.Identity
 @model FriendsMess.ViewModels.HomeViewModel
 @{
@@ -10,7 +11,7 @@
     @Html.ActionLink("Download pdf", "ExportPdf", "Home", null, new { @class = "btn btn-success", style = "float:left; margin-top: 10px" })
     <button class="btn btn-danger js-clearMonth" style="float: right; margin-top: 10px;">Start New Month</button>
 </span>
-<h2 style="text-align: center; color:crimson">Meal Rate:@mealRate.ToString("C2")</h2>
+<h2 style="text-align: center; color:crimson">Meal Rate:@mealRate.ToString("C2",CultureInfo.CreateSpecificCulture("en-BD"))</h2>
 @if (Model.Members.Count > 0)
 {
     <div>
@@ -35,10 +36,10 @@
 
                 <tr class="primay">
                     <td>@member.Name</td>
-                    <td>@member.Deposit.ToString("C0")</td>
-                    <td>@mealExpense.ToString("C2")</td>
-                    <td>@otherExpense.ToString("C2")</td>
-                    <td>@balance.ToString("C2")</td>
+                    <td>@member.Deposit.ToString("C0", CultureInfo.CreateSpecificCulture("en-BD"))</td>
+                    <td>@mealExpense.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
+                    <td>@otherExpense.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
+                    <td>@balance.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
                 </tr>
             }
             </tbody>
