applying viewOnly for members

--- a/FriendsMess/Views/Extra/Index.cshtml
+++ b/FriendsMess/Views/Extra/Index.cshtml
@@ -7,7 +7,7 @@
 <span style="float:right;margin-top:10px;">
     @Html.ActionLink("New Expense", "New", "Extra", "", new { @class = "btn btn-info" })
 </span>
-<h2 style ="text-align: center; color: darkred;">Other Expenses</h2>
+<h2 style ="text-align: center; color: white;">Other Expenses</h2>
 @if (Model.Count > 0)
 {
 <div>
