--- a/FriendsMess/Views/Members/AddDeposit.cshtml
+++ b/FriendsMess/Views/Members/AddDeposit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "title";
 }
 
-<h2>Add Deposit</h2>
+<h2 style="text-align: center;color: white">Add Deposit</h2>
 <div>
     @using (Html.BeginForm("SaveDeposit", "Members"))
     {
