--- a/FriendsMess/Views/Shared/_Layout.cshtml
+++ b/FriendsMess/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body>
+<body style="background-color: dimgrey">
     <div class="navbar navbar-inverse navbar-fixed-top" style="background-color:lightblue;">
         <div class="container">
             <div class="navbar-header">
