--- a/FriendsMess/Views/Update/New.cshtml
+++ b/FriendsMess/Views/Update/New.cshtml
@@ -6,7 +6,7 @@
     <span style="float:right;margin-top:10px;">
         @Html.ActionLink("Assign Members", "AssignMember", "Extra", "", new { @class = "btn btn-info" })
     </span>
-    <h2 style="text-align: center; color: darkred">Update meals</h2>
+    <h2 style="text-align: center; color:white">Update meals</h2>
     @if (Model.Members.Count > 0)
     {
         using (Html.BeginForm("Save", "Update"))
