--- a/FriendsMess/Content/Site.css
+++ b/FriendsMess/Content/Site.css
@@ -3,6 +3,10 @@
     padding-bottom: 20px;
 }
 
+body table tr td {
+    color: black;
+}
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
