--- a/FriendsMess/Views/Home/Expense.cshtml
+++ b/FriendsMess/Views/Home/Expense.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Expense";
 }
-<h2 style="text-align: center; color: darkred;">Daily Expenses</h2>
+<h2 style="text-align: center; color:white;">Daily Expenses</h2>
 @if (Model.Count > 0)
 {
 <table class="table table-bordered table-hover">
