--- a/FriendsMess/Views/Members/Index.cshtml
+++ b/FriendsMess/Views/Members/Index.cshtml
@@ -7,7 +7,7 @@
 <span style="float:right;margin-top:10px;">
     @Html.ActionLink("New Member", "New", "Members", null, new { @class = "btn btn-primary" })
 </span>
-<h2 style="text-align: center; color: darkred;">Members</h2>
+<h2 style="text-align: center; color: white;">Members</h2>
 @if (Model.Count > 0)
 {
 <table id="member" class="table table-bordered table-hover">
