--- a/FriendsMess/Views/Members/ViewMeal.cshtml
+++ b/FriendsMess/Views/Members/ViewMeal.cshtml
@@ -4,7 +4,7 @@
     var totalMeal = 0;
 }
 
-<h2 style="text-align: center;color: brown">Meals of @ViewBag.member</h2>
+<h2 style="text-align: center;color: white">Meals of @ViewBag.member</h2>
 @if (Model.Count > 0)
 {
 <div>
