--- a/FriendsMess/Views/Shared/_ViewOnly.cshtml
+++ b/FriendsMess/Views/Shared/_ViewOnly.cshtml
@@ -9,7 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body>
+<body style="background-color:cornflowerblue">
     <div class="navbar navbar-inverse navbar-fixed-top" style="background-color:lightblue;">
         <div class="container">
             <div class="navbar-header">
@@ -22,7 +22,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav" >
-                    <li>@Html.ActionLink("Home", "Home", "ViewOnly")</li>
+                    <li>@Html.ActionLink("Home", "ViewHome", "ViewOnly")</li>
                     <li>@Html.ActionLink("Members", "Members", "ViewOnly")</li>
                     <li>@Html.ActionLink("Expenses", "Expense", "ViewOnly")</li>
                     <li>@Html.ActionLink("Others", "Others", "ViewOnly")</li>
