--- a/FriendsMess/Views/Home/Index.cshtml
+++ b/FriendsMess/Views/Home/Index.cshtml
@@ -20,6 +20,7 @@
             <tr class="danger">
                 <th>Name</th>
                 <th>Deposit</th>
+                <th>Total Meal</th>
                 <th>Meal Cost</th>
                 <th>Ohter Expenses</th>
                 <th>Balance</th>
@@ -37,10 +38,43 @@
                 <tr class="primay">
                     <td>@member.Name</td>
                     <td>@member.Deposit.ToString("C0", CultureInfo.CreateSpecificCulture("en-BD"))</td>
+                    <td>@totalMeal</td>
                     <td>@mealExpense.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
                     <td>@otherExpense.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
                     <td>@balance.ToString("C2", CultureInfo.CreateSpecificCulture("en-BD"))</td>
                 </tr>
+            }
+            </tbody>
+        </table>
+        <br/>
+        <h2 style="text-align: center; color:white">Detailed Meals</h2>
+        <table class="table table-bordered table-hover">
+            <thead>
+            <tr class="danger">
+                <th>Date</th>
+                @foreach (var mem in Model.Members)
+                {
+                    <th>@mem.Name</th>
+                }
+            </tr>
+            </thead>
+            <tbody>
+            @{
+                int j = 0;
+                int m = 0;
+                var totalDay = Model.Days.Count;
+                var totalMember = Model.Members.Count;
+                for (int i = 0; i < totalDay; i++)
+                {
+                    <tr>
+                        <td>@Model.Days[j++].DayNumber</td>
+                        @for (int k=0; k<totalMember; k++)
+                        {
+                        <td>@Model.Meals[m++].MealNo</td>
+                        }
+                    </tr>
+                    
+                }
             }
             </tbody>
         </table>
